[project]
name = "bear-sighting-api"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "dotenv>=0.9.9",
    "ruff>=0.14.2",
    "pydantic>=2.12.3",
    "sqlalchemy>=2.0.44",
    "geopy>=2.4.1",
    "redis>=7.0.1",
    "apscheduler>=3.11.0",
    "psycopg2-binary>=2.9.11",
    "httpx>=0.28.1",
    "openai>=2.6.1",
]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
